mock desgin to live

--- a/index.html
+++ b/index.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Quote of the day</title>
-
-    <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" />
-    <link href="./style.css" rel="stylesheet" />
+    <title>Excursion</title>
+    <link rel="stylesheet" href="./resources/css/style.css" />
   </head>
-
   <body>
-    <div id="root"></div>
-    <script src="./script.js"></script>
+    <!-- header -->
+    <header>
+      <h1>Discover hidden places in the world around you</h1>
+    </header>
+
+    <!-- main -->
+    <main>
+      <p>
+        <a href="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4"
+          >Download Excursion (Coming soon!)</a
+        >
+      </p>
+      <video
+        src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4"
+        autoplay
+        muted
+        loop
+      ></video>
+    </main>
+
+    <!-- 1st section -->
+    <section>
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <figure>
+        <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="camp" />
+      </figure>
+    </section>
+
+    <!-- 2nd section -->
+    <section>
+      <figure>
+        <img
+          src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png"
+          alt="cell phone icon"
+        />
+      </figure>
+      <h2>Coming Soon for iPhone and Android</h2>
+      <p>
+        <a href="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4"
+          >Download Excursion (Coming soon!)</a
+        >
+      </p>
+    </section>
+
+    <!-- footer -->
+    <footer>
+      <p>© Excursion</p>
+    </footer>
   </body>
 </html>
