--- a/foliesfleurs/index.html
+++ b/foliesfleurs/index.html
@@ -96,10 +96,14 @@
                 <div class="rd-navbar-collapse">
                   <ul class="contacts-classic">
                     <li>
-                      <span class="contacts-classic-title">Call us:</span>
-                      <a href="tel:#">+1 (844) 123 456 78</a>
+                      <span class="contacts-classic-title">Nous joindre </span>
+                      <a href="tel:06 59 30 48 12">06 59 30 48 12</a>
                     </li>
-                    <li><a href="mailto:#">info@demolink.org</a></li>
+                    <li>
+                      <a href="mailto:folies.fleurs@gmail.com"
+                        >folies.fleurs@gmail.com</a
+                      >
+                    </li>
                   </ul>
                   <a
                     class="rd-navbar-basket rd-navbar-basket-mobile fl-bigmug-line-shopping202"
@@ -1807,7 +1811,7 @@
                 class="col-sm-6 col-md-5 col-lg-4 col-xl-3 wow fadeInRight"
                 data-wow-delay=".2s"
               >
-                <h5 class="footer-modern-title">Get in touch</h5>
+                <h5 class="footer-modern-title">Nour joindre</h5>
                 <ul class="contacts-creative">
                   <li>
                     <div class="unit unit-spacing-sm flex-column flex-md-row">
@@ -1816,8 +1820,8 @@
                       </div>
                       <div class="unit-body">
                         <a href="#"
-                          >523 Sylvan Ave, 5th Floor<br />Mountain View, CA
-                          94041 USA</a
+                          >Marché de Saint Maur des Fossés<br />
+                          94100 Saint Maur des Fossés</a
                         >
                       </div>
                     </div>
@@ -1828,7 +1832,7 @@
                         <span class="icon mdi mdi-phone"></span>
                       </div>
                       <div class="unit-body">
-                        <a href="tel:#">(+844) 123 456 78</a>
+                        <a href="tel:06 59 30 48 12">06 59 30 48 12</a>
                       </div>
                     </div>
                   </li>
@@ -1838,7 +1842,9 @@
                         <span class="icon mdi mdi-email-outline"></span>
                       </div>
                       <div class="unit-body">
-                        <a href="mailto:#">info@demolink.org</a>
+                        <a href="mailto:folies.fleurs@gmail.com"
+                          >folies.fleurs@gmail.com</a
+                        >
                       </div>
                     </div>
                   </li>
@@ -1877,7 +1883,7 @@
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
-    <!-- Google Tag Manager --><noscript
+    <!-- Google Tag Manager<noscript
       ><iframe
         src="//www.googletagmanager.com/ns.html?id=GTM-P9FT69"
         height="0"
@@ -1896,7 +1902,7 @@
         j.src = '//www.googletagmanager.com/gtm.js?id=' + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, 'script', 'dataLayer', 'GTM-P9FT69');
-    </script>
+    </script> -->
     <!-- End Google Tag Manager -->
   </body>
 </html>
