--- a/foliesfleurs/index.html
+++ b/foliesfleurs/index.html
@@ -92,7 +92,7 @@
             >
               <span></span>
             </div>
-            <div class="rd-navbar-aside-outer">
+            <!-- <div class="rd-navbar-aside-outer">
               <div class="rd-navbar-aside">
                 <div class="rd-navbar-collapse">
                   <ul class="contacts-classic">
@@ -106,40 +106,9 @@
                       >
                     </li>
                   </ul>
-                  <a
-                    class="rd-navbar-basket rd-navbar-basket-mobile fl-bigmug-line-shopping202"
-                    href="cart-page.html"
-                    ><span>2</span></a
-                  >
-                </div>
-                <!-- RD Navbar Panel-->
-                <div class="rd-navbar-panel">
-                  <!-- RD Navbar Toggle-->
-                  <button
-                    class="rd-navbar-toggle"
-                    data-rd-navbar-toggle=".rd-navbar-nav-wrap"
-                  >
-                    <span></span>
-                  </button>
-                  <!-- RD Navbar Brand-->
-                  <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="../"
-                      ><img
-                        class="brand-logo-dark"
-                        src="images/logo-default-141x35.png"
-                        alt=""
-                        width="70"
-                        height="17" /><img
-                        class="brand-logo-light"
-                        src="images/logo-inverse-141x35.png"
-                        alt=""
-                        width="70"
-                        height="17"
-                    /></a>
-                  </div>
                 </div>
               </div>
-            </div>
+            </div> -->
             <div class="rd-navbar-main-outer">
               <div class="rd-navbar-main">
                 <div class="rd-navbar-nav-wrap">
@@ -150,7 +119,9 @@
                     <li class="rd-nav-item">
                       <a class="rd-nav-link" href="#BOUQUETS">Bouques</a>
                     </li>
-
+                    <li class="rd-nav-item">
+                      <a class="rd-nav-link" href="#service">Nos services</a>
+                    </li>
                     <li class="rd-nav-item">
                       <a class="rd-nav-link" href="#GALLARY">Gallery</a>
                     </li>
@@ -478,6 +449,7 @@
       </section>
 
       <!-- Why Choose Us-->
+      <a name="service"></a>
       <section class="section section-xxl bg-default text-md-left">
         <div class="container">
           <div
@@ -487,7 +459,7 @@
               <div class="decorative-box">
                 <img
                   class="box-shadow-1"
-                  src="images/index-img-520x430.jpg"
+                  src="images/logo-default-141x35.png"
                   alt=""
                   width="520"
                   height="430"
@@ -1026,167 +998,60 @@
       <footer class="section footer-modern footer-modern-2">
         <div class="footer-modern-body section-xl context-dark">
           <div class="container">
-            <div class="row row-40 row-md-50 justify-content-xl-between">
-              <div class="col-md-10 col-lg-3 col-xl-4 wow fadeInRight">
-                <div class="inset-xl-right-70 block-1">
-                  <h5 class="footer-modern-title">Our Gallery</h5>
-                  <div class="row row-10 gutters-10" data-lightgallery="group">
-                    <div class="col-4 col-sm-2 col-lg-4">
-                      <!-- Thumbnail Minimal--><a
-                        class="thumbnail-minimal"
-                        href="images/grid-gallery-1-1200x800-original.jpg"
-                        data-lightgallery="item"
-                        ><img
-                          src="images/grid-gallery-1-93x93.jpg"
-                          alt=""
-                          width="93"
-                          height="93"
-                      /></a>
-                    </div>
-                    <div class="col-4 col-sm-2 col-lg-4">
-                      <!-- Thumbnail Minimal--><a
-                        class="thumbnail-minimal"
-                        href="images/grid-gallery-4-1200x800-original.jpg"
-                        data-lightgallery="item"
-                        ><img
-                          src="images/grid-gallery-2-93x93.jpg"
-                          alt=""
-                          width="93"
-                          height="93"
-                      /></a>
-                    </div>
-                    <div class="col-4 col-sm-2 col-lg-4">
-                      <!-- Thumbnail Minimal--><a
-                        class="thumbnail-minimal"
-                        href="images/grid-gallery-5-1200x800-original.jpg"
-                        data-lightgallery="item"
-                        ><img
-                          src="images/grid-gallery-3-93x93.jpg"
-                          alt=""
-                          width="93"
-                          height="93"
-                      /></a>
-                    </div>
-                    <div class="col-4 col-sm-2 col-lg-4">
-                      <!-- Thumbnail Minimal--><a
-                        class="thumbnail-minimal"
-                        href="images/grid-gallery-6-1200x800-original.jpg"
-                        data-lightgallery="item"
-                        ><img
-                          src="images/grid-gallery-4-93x93.jpg"
-                          alt=""
-                          width="93"
-                          height="93"
-                      /></a>
-                    </div>
-                    <div class="col-4 col-sm-2 col-lg-4">
-                      <!-- Thumbnail Minimal--><a
-                        class="thumbnail-minimal"
-                        href="images/grid-gallery-7-1200x800-original.jpg"
-                        data-lightgallery="item"
-                        ><img
-                          src="images/grid-gallery-5-93x93.jpg"
-                          alt=""
-                          width="93"
-                          height="93"
-                      /></a>
-                    </div>
-                    <div class="col-4 col-sm-2 col-lg-4">
-                      <!-- Thumbnail Minimal--><a
-                        class="thumbnail-minimal"
-                        href="images/grid-gallery-8-1200x800-original.jpg"
-                        data-lightgallery="item"
-                        ><img
-                          src="images/grid-gallery-6-93x93.jpg"
-                          alt=""
-                          width="93"
-                          height="93"
-                      /></a>
-                    </div>
+            <a name="CONTACT"></a>
+
+            <h5 class="footer-modern-title">Nour joindre</h5>
+            <ul class="contacts-creative">
+              <li>
+                <div class="unit unit-spacing-sm flex-column flex-md-row">
+                  <div class="unit-left">
+                    <span class="icon mdi mdi-map-marker"></span>
+                  </div>
+                  <div class="unit-body">
+                    <a href="#"
+                      >Siège: 26 rue Champabon <br />77520 Donnemarie
+                      Dontilly</a
+                    >
                   </div>
                 </div>
-              </div>
-              <div
-                class="col-sm-6 col-md-7 col-lg-5 wow fadeInRight"
-                data-wow-delay=".1s"
-              >
-                <h5 class="footer-modern-title">Navigation</h5>
-                <ul
-                  class="footer-modern-list footer-modern-list-2 d-sm-inline-block d-md-block"
-                >
-                  <li><a href="our-team.html">Our Team</a></li>
-                  <li><a href="grid-shop.html">New Products</a></li>
-                  <li><a href="#">Top Sellers</a></li>
-                  <li><a href="about-us.html">About Us</a></li>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="contact-us.html">Contact Us</a></li>
-                  <li><a href="#">Roses</a></li>
-                  <li><a href="#">Tulips</a></li>
-                  <li><a href="#">Lilies</a></li>
-                  <li><a href="#">Irises</a></li>
-                  <li><a href="#">Mixed Bouquets</a></li>
-                </ul>
-              </div>
-              <a name="CONTACT"></a>
-              <div
-                class="col-sm-6 col-md-5 col-lg-4 col-xl-3 wow fadeInRight"
-                data-wow-delay=".2s"
-              >
-                <h5 class="footer-modern-title">Nour joindre</h5>
-                <ul class="contacts-creative">
-                  <li>
-                    <div class="unit unit-spacing-sm flex-column flex-md-row">
-                      <div class="unit-left">
-                        <span class="icon mdi mdi-map-marker"></span>
-                      </div>
-                      <div class="unit-body">
-                        <a href="#"
-                          >Siège: 26 rue Champabon <br />77520 Donnemarie
-                          Dontilly</a
-                        >
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="unit unit-spacing-sm flex-column flex-md-row">
-                      <div class="unit-left">
-                        <span class="icon mdi mdi-phone"></span>
-                      </div>
-                      <div class="unit-body">
-                        <a href="tel:06 59 30 48 12">06 59 30 48 12</a>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="unit unit-spacing-sm flex-column flex-md-row">
-                      <div class="unit-left">
-                        <span class="icon mdi mdi-email-outline"></span>
-                      </div>
-                      <div class="unit-body">
-                        <a href="mailto:folies.fleurs@gmail.com"
-                          >folies.fleurs@gmail.com</a
-                        >
-                      </div>
-                    </div>
-                  </li>
-                </ul>
-                <ul class="list-inline list-social-3 list-inline-sm">
-                  <li>
-                    <a class="icon mdi mdi-facebook icon-xxs" href="#"></a>
-                  </li>
-                  <li>
+              </li>
+              <li>
+                <div class="unit unit-spacing-sm flex-column flex-md-row">
+                  <div class="unit-left">
+                    <span class="icon mdi mdi-phone"></span>
+                  </div>
+                  <div class="unit-body">
+                    <a href="tel:06 59 30 48 12">06 59 30 48 12</a>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="unit unit-spacing-sm flex-column flex-md-row">
+                  <div class="unit-left">
+                    <span class="icon mdi mdi-email-outline"></span>
+                  </div>
+                  <div class="unit-body">
+                    <a href="mailto:folies.fleurs@gmail.com"
+                      >folies.fleurs@gmail.com</a
+                    >
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <ul class="list-inline list-social-3 list-inline-sm">
+              <li>
+                <a
+                  class="icon mdi mdi-facebook icon-xxs"
+                  href="https://www.facebook.com/foliesfleurs/photos/?ref=page_internal"
+                ></a>
+              </li>
+              <!-- <li>
                     <a class="icon mdi mdi-twitter icon-xxs" href="#"></a>
-                  </li>
-                  <li>
-                    <a class="icon mdi mdi-instagram icon-xxs" href="#"></a>
-                  </li>
-                  <li>
-                    <a class="icon mdi mdi-google-plus icon-xxs" href="#"></a>
-                  </li>
-                  <li><a class="icon mdi mdi-skype icon-xxs" href="#"></a></li>
-                </ul>
-              </div>
-            </div>
+                  </li> -->
+              <li>
+                <a class="icon mdi mdi-instagram icon-xxs" href="#"></a>
+              </li>
+            </ul>
           </div>
         </div>
         <div class="footer-modern-panel text-center">
