--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+</html><html lang="en">
    <head>
       <!-- Required meta tags -->
       <meta charset="utf-8">
@@ -1516,3 +1516,5 @@
       </script>
    </body>
 </html>
+
+// sourceMappingURL=bootstrap.min.js.map
