my profile build v2

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- <h3>Contact</h3> -->
       <!-- contact -->
       <nav>
-        <a href="https://github.com/NumagaConsulting"
+        <a href="https://github.com/NumagaConsulting" target="_blank"
           ><i class="fab fa-github"></i
         ></a>
         <a href="mailto:contact@numaga.fr"
