my profile build v5

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="stylesheet" href="./src/css/style.css" />
     <link rel="stylesheet" href="./src/css/all.min.css" />
-    <title>My Portofolio</title>
+    <title>Shiwei's Profile</title>
   </head>
   <body>
     <header>
