first react project jamming

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
       <!-- Projects -->
       <section id="projects">
         <h3>Projects</h3>
+
+        <!-- 1st project -->
         <details class="project" close>
           <summary class="project-title">
             That first site I've ever built.
@@ -105,6 +107,8 @@
             <i class="fab fa-raspberry-pi"></i>
           </div>
         </details>
+
+        <!-- 2nd project -->
         <details class="project" close>
           <summary class="project-titil">
             This is my first certificate from Codeacademy.
@@ -122,6 +126,8 @@
             <i class="fab fa-html5"></i>
           </div>
         </details>
+
+        <!-- 3rd project -->
         <details class="project" close>
           <summary class="project-title">My first project with node</summary>
           <a
@@ -154,6 +160,41 @@
             <i class="fab fa-linux"></i>
           </div>
         </details>
+
+        <!-- 4rd project -->
+        <details class="project" close>
+          <summary class="project-title">My first react project</summary>
+          <a
+            href="https://numagaconsulting.github.io/live/jamming/"
+            target="_blank"
+            ><img
+              src="./src/image/jamming.png"
+              alt="a site loads random quotes"
+              class="project-image"
+          /></a>
+          <p class="project-description">
+            My first react portofolio project which allows end users to query
+            music on spotify and save music as playlist on her/his spotify
+            account.
+          </p>
+          <div class="skill-set">
+            <p><strong>Skills applied:</strong></p>
+            <i class="fab fa-html5"></i>
+            <i class="fab fa-css3-alt"></i>
+            <!-- <i class="fas fa-universal-access"></i> -->
+            <i class="fab fa-js"></i>
+            <i class="fab fa-react"></i>
+            <!-- <i class="fab fa-sketch"></i>
+            <i class="fab fa-figma"></i> -->
+            <i class="fab fa-git"></i>
+            <i class="fab fa-github"></i>
+            <i class="fab fa-chrome"></i>
+            <i class="fas fa-terminal"></i>
+            <i class="fab fa-node"></i>
+            <!-- <i class="fab fa-docker"></i> -->
+            <i class="fab fa-linux"></i>
+          </div>
+        </details>
       </section>
 
       <!-- Skills -->
@@ -165,7 +206,7 @@
           <i class="fab fa-wordpress"></i>
           <i class="fas fa-universal-access"></i>
           <i class="fab fa-js"></i>
-          <!-- <i class="fab fa-react"></i> -->
+          <i class="fab fa-react"></i>
           <!-- <i class="fab fa-sketch"></i>
           <i class="fab fa-figma"></i> -->
           <i class="fab fa-git"></i>
