spotify jamming added to index.html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <details class="project" close>
           <summary class="project-title">My first react project</summary>
           <a
-            href="https://numagaconsulting.github.io/live/jamming/"
+            href="https://spotify-jamming-playlist.herokuapp.com/"
             target="_blank"
             ><img
               src="./src/image/jamming.png"
