--- a/index.html
+++ b/index.html
@@ -168,14 +168,14 @@
             href="https://spotify-jamming-playlist.herokuapp.com/"
             target="_blank"
             ><img
-              src="./src/image/jamming.png"
+              src="./src/image/jamming.jpg"
               alt="a site loads random quotes"
               class="project-image"
           /></a>
           <p class="project-description">
-            My first react portofolio project which allows end users to query
-            music on spotify and save music as playlist on her/his spotify
-            account.
+            My first react portofolio project deployed on Heroku which allows
+            end users to query music on spotify and save music as playlist on
+            her/his spotify account.
           </p>
           <div class="skill-set">
             <p><strong>Skills applied:</strong></p>
@@ -184,6 +184,7 @@
             <!-- <i class="fas fa-universal-access"></i> -->
             <i class="fab fa-js"></i>
             <i class="fab fa-react"></i>
+            <i class="fab fa-heroku"></i>
             <!-- <i class="fab fa-sketch"></i>
             <i class="fab fa-figma"></i> -->
             <i class="fab fa-git"></i>
