update index.html with certificats

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <!-- 1st project -->
         <details class="project" close>
           <summary class="project-title">
-            That first site I've ever built.
+            That first site I've ever built
           </summary>
           <a href="https://uparisclub.com" target="_blank"
             ><img
@@ -109,25 +109,6 @@
         </details>
 
         <!-- 2nd project -->
-        <details class="project" close>
-          <summary class="project-titil">
-            This is my first certificate from Codeacademy.
-          </summary>
-          <img
-            src="./src/image/first_certificat.jpg"
-            alt="a certificate HTML"
-          />
-          <p class="project-description">
-            After a few weeks of intro, I got my first certificate. I will get
-            more soon.
-          </p>
-          <div class="skill-set">
-            <p><strong>Skills qualified:</strong></p>
-            <i class="fab fa-html5"></i>
-          </div>
-        </details>
-
-        <!-- 3rd project -->
         <details class="project" close>
           <summary class="project-title">My first project with node</summary>
           <a
@@ -161,7 +142,7 @@
           </div>
         </details>
 
-        <!-- 4rd project -->
+        <!-- 3rd project -->
         <details class="project" close>
           <summary class="project-title">My first react project</summary>
           <a
@@ -195,6 +176,59 @@
             <!-- <i class="fab fa-docker"></i> -->
             <i class="fab fa-linux"></i>
           </div>
+        </details>
+
+        <!-- certificats -->
+        <details class="project" close>
+          <summary class="project-titil">
+            Courses that I've completed on Codeacademy
+          </summary>
+          <div class="skill-set">
+            <p><strong>Skills qualified:</strong></p>
+            <i class="fab fa-html5"></i>
+          </div>
+          <img
+            src="./src/image/first_certificat.jpg"
+            alt="a certificate HTML"
+          />
+
+          <div class="skill-set">
+            <p><strong>Skills qualified:</strong></p>
+            <i class="fab fa-git"></i>
+          </div>
+          <img
+            src="./src/image/Codecademy_certificat_Git.jpg"
+            alt="a certificate git"
+          />
+
+          <div class="skill-set">
+            <p><strong>Skills qualified:</strong></p>
+            <i class="fas fa-terminal"></i>
+          </div>
+          <img
+            src="./src/image/Codecademy_certificat_cmd.jpg"
+            alt="a certificate linux command line"
+          />
+
+          <div class="skill-set">
+            <p><strong>Skills qualified:</strong></p>
+            <i class="fab fa-html5"></i>
+            <i class="fab fa-css3-alt"></i>
+            <i class="fab fa-js"></i>
+          </div>
+          <img
+            src="./src/image/Codecademy_certificat_Building-Interactive-JavaScript-Websites-Course.jpg"
+            alt="a certificate Building Interactive JavaScript Websites"
+          />
+
+          <div class="skill-set">
+            <p><strong>Skills qualified:</strong></p>
+            <i class="fab fa-js"></i>
+          </div>
+          <img
+            src="./src/image/Codecademy_certificat_JavaScript.jpg"
+            alt="a certificate JavaScript"
+          />
         </details>
       </section>
 
