update index.html with certificats a href

--- a/index.html
+++ b/index.html
@@ -187,28 +187,33 @@
             <p><strong>Skills qualified:</strong></p>
             <i class="fab fa-html5"></i>
           </div>
-          <img
-            src="./src/image/first_certificat.jpg"
-            alt="a certificate HTML"
-          />
+          <a href="https://www.codecademy.com/learn/learn-html" target="_blank"
+            ><img
+              src="./src/image/first_certificat.jpg"
+              alt="a certificate HTML"
+          /></a>
 
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
             <i class="fab fa-git"></i>
           </div>
-          <img
-            src="./src/image/Codecademy_certificat_Git.jpg"
-            alt="a certificate git"
-          />
+          <a href="https://www.codecademy.com/learn/learn-git" target="_blank"
+            ><img
+              src="./src/image/Codecademy_certificat_Git.jpg"
+              alt="a certificate git"
+          /></a>
 
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
             <i class="fas fa-terminal"></i>
           </div>
-          <img
-            src="./src/image/Codecademy_certificat_cmd.jpg"
-            alt="a certificate linux command line"
-          />
+          <a
+            href="https://www.codecademy.com/learn/learn-the-command-line"
+            target="_blank"
+            ><img
+              src="./src/image/Codecademy_certificat_cmd.jpg"
+              alt="a certificate linux command line"
+          /></a>
 
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
@@ -216,19 +221,25 @@
             <i class="fab fa-css3-alt"></i>
             <i class="fab fa-js"></i>
           </div>
-          <img
-            src="./src/image/Codecademy_certificat_Building-Interactive-JavaScript-Websites-Course.jpg"
-            alt="a certificate Building Interactive JavaScript Websites"
-          />
+          <a
+            href="https://www.codecademy.com/learn/build-interactive-websites"
+            target="_blank"
+            ><img
+              src="./src/image/Codecademy_certificat_Building-Interactive-JavaScript-Websites-Course.jpg"
+              alt="a certificate Building Interactive JavaScript Websites"
+          /></a>
 
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
             <i class="fab fa-js"></i>
           </div>
-          <img
-            src="./src/image/Codecademy_certificat_JavaScript.jpg"
-            alt="a certificate JavaScript"
-          />
+          <a
+            href="https://www.codecademy.com/learn/introduction-to-javascript"
+            target="_blank"
+            ><img
+              src="./src/image/Codecademy_certificat_JavaScript.jpg"
+              alt="a certificate JavaScript"
+          /></a>
         </details>
       </section>
 
