--- a/index.html
+++ b/index.html
@@ -236,6 +236,18 @@
               src="./src/image/Codecademy_certificat_JavaScript.jpg"
               alt="a certificate JavaScript"
           /></a>
+
+          <div class="skill-set">
+            <p><strong>Skills qualified:</strong></p>
+            <i class="fab fa-regex"></i>
+          </div>
+          <a
+            href="https://www.codecademy.com/learn/introduction-to-regular-expressions"
+            target="_blank"
+            ><img
+              src="./src/image/Codecademy_regex.jpg"
+              alt="a certificate regex"
+          /></a>
         </details>
       </section>
 
