update before reinstall

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           /></a>
 
           <div class="skill-set">
-            <p><strong>Skills qualified:</strong></p>
+            <p><strong>Skills qualified: Regular expressions</strong></p>
             <i class="fab fa-regex"></i>
           </div>
           <a
