change source of quotes

--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
       <!-- <h3>Contact</h3> -->
       <!-- contact -->
       <nav>
-        <a href="https://github.com/NumagaConsulting" target="_blank"
-          ><i class="fab fa-github"></i
-        ></a>
-        <a href="mailto:contact@numaga.fr"
-          ><i class="fas fa-feather-alt"></i
-        ></a>
+        <a href="https://github.com/NumagaConsulting" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="mailto:contact@numaga.fr"><i class="fas fa-feather-alt"></i></a>
       </nav>
     </header>
 
@@ -31,44 +27,33 @@
       <section id="about-me">
         <h3>About Me</h3>
         <p class="text one">
-          Hello, I'm Yu, based in Paris. Once a while, my wife (back in days was
-          my girlfriend) told me that her travel agency needs a website for
-          sales. After a while searching on market, either the cost of building
-          site was not affordable or the time required for such job was
-          unexpected long. I decided to make a website with the knowledge I had
-          for her business demand.
+          Hello, I'm Yu, based in Paris. Once a while, my wife (back in days was my girlfriend) told me that her travel
+          agency needs a website for sales. After a while searching on market, either the cost of building site was not
+          affordable or the time required for such job was unexpected long. I decided to make a website with the
+          knowledge I had for her business demand.
         </p>
         <p class="text two">
-          At the time, I have been using python for data analyse and web
-          scraping for a while. But I haven't systematically learned HTML, CSS
-          and JS. Therefore, i started with wordpress for the site, along the
-          way of the building the site, I found to make my site fully function
-          that I have to buy a tons of plugins which was going to cost me much
-          more than our budget. Morevoer, the site still didn't come out the way
-          as we required.
+          At the time, I have been using python for data analyse and web scraping for a while. But I haven't
+          systematically learned HTML, CSS and JS. Therefore, i started with wordpress for the site, along the way of
+          the building the site, I found to make my site fully function that I have to buy a tons of plugins which was
+          going to cost me much more than our budget. Morevoer, the site still didn't come out the way as we required.
         </p>
         <p class="text three">
-          I have no choice but start learning while building the site. Finally,
-          I made it with a few essential plugins to make this old CMS to an
-          e-commerce site, which have been online since May 2019 and over total
-          200K euro of transactions has been done on the site. Initially, the
-          site is deployed with docker on my home server. Along the way, I have
-          moved it over Aliyun which is more affordable AWS liked cloud service
-          provied by Alibaba, a global leading Chinese tech giant.
+          I have no choice but start learning while building the site. Finally, I made it with a few essential plugins
+          to make this old CMS to an e-commerce site, which have been online since May 2019 and over total 200K euro of
+          transactions has been done on the site. Initially, the site is deployed with docker on my home server. Along
+          the way, I have moved it over Aliyun which is more affordable AWS liked cloud service provied by Alibaba, a
+          global leading Chinese tech giant.
         </p>
         <p class="text four">
-          After 5 years of military service in French foreign legion, i decided
-          to to back to my civilian life. And I right hit on the period of COVID
-          and I have plenty of free time. I started taking a course at
-          Codeacademy to becaome a full stack developper. I wish at the end a
-          year, i could have acomplished the mojority of the courses. I wish to
-          rebuild the e-commance site for the company. From there, I would like
-          to be a freelancer to help the people to transform their business in
-          digital.
+          After 5 years of military service in French foreign legion, i decided to to back to my civilian life. And I
+          right hit on the period of COVID and I have plenty of free time. I started taking a course at Codeacademy to
+          becaome a full stack developper. I wish at the end a year, i could have acomplished the mojority of the
+          courses. I wish to rebuild the e-commance site for the company. From there, I would like to be a freelancer to
+          help the people to transform their business in digital.
         </p>
         <p class="text five">
-          Welcome to check out my projects. If you would like someone to build a
-          site, YU is you are looking for.
+          Welcome to check out my projects. If you would like someone to build a site, YU is you are looking for.
         </p>
       </section>
 
@@ -80,14 +65,10 @@
         <details class="project" close>
           <summary class="project-title">The first site I've built</summary>
           <a href="https://uparisclub.com" target="_blank"
-            ><img
-              src="./src/image/uparisclub.jpg"
-              alt="uparisclub.com log"
-              class="project-image"
+            ><img src="./src/image/uparisclub.jpg" alt="uparisclub.com log" class="project-image"
           /></a>
           <p class="project-desciption">
-            The screen shot of my first website, which is currently still
-            running on service.
+            The screen shot of my first website, which is currently still running on service.
           </p>
           <div class="skill-set">
             <p><strong>Skills applied:</strong></p>
@@ -109,17 +90,12 @@
         <!-- 2nd project -->
         <details class="project" close>
           <summary class="project-title">My first project with node</summary>
-          <a
-            href="https://numagaconsulting.github.io/live/mixed-message/"
-            target="_blank"
-            ><img
-              src="./src/image/quotes.jpg"
-              alt="a site loads random quotes"
-              class="project-image"
+          <a href="https://numagaconsulting.github.io/live/mixed-message/" target="_blank"
+            ><img src="./src/image/quotes.jpg" alt="a site loads random quotes" class="project-image"
           /></a>
           <p class="project-description">
-            My first portofolio project, which back-end API running on node
-            deployed on the docker, and front-end page loads random quotes.
+            My first portofolio project, which back-end API running on node deployed on the docker, and front-end page
+            loads random quotes.
           </p>
           <div class="skill-set">
             <p><strong>Skills applied:</strong></p>
@@ -143,18 +119,12 @@
         <!-- 3rd project -->
         <details class="project" close>
           <summary class="project-title">My first react project</summary>
-          <a
-            href="https://spotify-jamming-playlist.herokuapp.com/"
-            target="_blank"
-            ><img
-              src="./src/image/jamming.jpg"
-              alt="a site loads random quotes"
-              class="project-image"
+          <a href="https://spotify-jamming-playlist.herokuapp.com/" target="_blank"
+            ><img src="./src/image/jamming.jpg" alt="a site loads random quotes" class="project-image"
           /></a>
           <p class="project-description">
-            My first react portofolio project deployed on Heroku which allows
-            end users to query music on spotify and save music as playlist on
-            her/his spotify account.
+            My first react portofolio project deployed on Heroku which allows end users to query music on spotify and
+            save music as playlist on her/his spotify account.
           </p>
           <div class="skill-set">
             <p><strong>Skills applied:</strong></p>
@@ -184,9 +154,7 @@
             <i class="fab fa-html5"></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-html" target="_blank"
-            ><img
-              src="./src/image/first_certificat.jpg"
-              alt="a certificate HTML"
+            ><img src="./src/image/first_certificat.jpg" alt="a certificate HTML"
           /></a>
 
           <div class="skill-set">
@@ -194,21 +162,15 @@
             <i class="fab fa-git"></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-git" target="_blank"
-            ><img
-              src="./src/image/Codecademy_certificat_Git.jpg"
-              alt="a certificate git"
+            ><img src="./src/image/Codecademy_certificat_Git.jpg" alt="a certificate git"
           /></a>
 
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
             <i class="fas fa-terminal"></i>
           </div>
-          <a
-            href="https://www.codecademy.com/learn/learn-the-command-line"
-            target="_blank"
-            ><img
-              src="./src/image/Codecademy_certificat_cmd.jpg"
-              alt="a certificate linux command line"
+          <a href="https://www.codecademy.com/learn/learn-the-command-line" target="_blank"
+            ><img src="./src/image/Codecademy_certificat_cmd.jpg" alt="a certificate linux command line"
           /></a>
 
           <div class="skill-set">
@@ -217,9 +179,7 @@
             <i class="fab fa-css3-alt"></i>
             <i class="fab fa-js"></i>
           </div>
-          <a
-            href="https://www.codecademy.com/learn/build-interactive-websites"
-            target="_blank"
+          <a href="https://www.codecademy.com/learn/build-interactive-websites" target="_blank"
             ><img
               src="./src/image/Codecademy_certificat_Building-Interactive-JavaScript-Websites-Course.jpg"
               alt="a certificate Building Interactive JavaScript Websites"
@@ -229,24 +189,16 @@
             <p><strong>Skills qualified:</strong></p>
             <i class="fab fa-js"></i>
           </div>
-          <a
-            href="https://www.codecademy.com/learn/introduction-to-javascript"
-            target="_blank"
-            ><img
-              src="./src/image/Codecademy_certificat_JavaScript.jpg"
-              alt="a certificate JavaScript"
+          <a href="https://www.codecademy.com/learn/introduction-to-javascript" target="_blank"
+            ><img src="./src/image/Codecademy_certificat_JavaScript.jpg" alt="a certificate JavaScript"
           /></a>
 
           <div class="skill-set">
             <p><strong>Skills qualified: Regular expressions</strong></p>
             <i class="fab fa-regex"></i>
           </div>
-          <a
-            href="https://www.codecademy.com/learn/introduction-to-regular-expressions"
-            target="_blank"
-            ><img
-              src="./src/image/Codecademy_regex.jpg"
-              alt="a certificate regex"
+          <a href="https://www.codecademy.com/learn/introduction-to-regular-expressions" target="_blank"
+            ><img src="./src/image/Codecademy_regex.jpg" alt="a certificate regex"
           /></a>
         </details>
       </section>
@@ -285,10 +237,7 @@
     </main>
 
     <footer>
-      Made with<a
-        href="https://www.legion-etrangere.com/?block=1&titre=FRENCH-FOREIGN-LEGION"
-      >
-        Honneur et Fidélité </a
+      Made with<a href="https://www.legion-etrangere.com/?block=1&titre=FRENCH-FOREIGN-LEGION"> Honneur et Fidélité </a
       >in France
     </footer>
 
@@ -296,7 +245,7 @@
       const quote = document.getElementById('quotes');
       const quote_text = document.createElement('p');
 
-      fetch('https://quotes.servehttp.com/')
+      fetch('https://quotes.legionnaire.world/')
         .then(
           (response) => {
             return response.json();
