update portfolio page

--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 
         <!-- 2nd project -->
         <details class="project" close>
-          <summary class="project-title">My first project with node</summary>
+          <summary class="project-title">
+            My first project with Vanilla JS in frontend and Node-Express-SQL in backend
+          </summary>
           <a href="https://numagaconsulting.github.io/live/mixed-message/" target="_blank"
             ><img src="./src/image/quotes.jpg" alt="a site loads random quotes" class="project-image"
           /></a>
@@ -200,6 +202,22 @@
           <a href="https://www.codecademy.com/learn/introduction-to-regular-expressions" target="_blank"
             ><img src="./src/image/Codecademy_regex.jpg" alt="a certificate regex"
           /></a>
+
+          <div class="skill-set">
+            <p><strong>Skills qualified: Build REST API with Node/Express/SQL</strong></p>
+            <i class="fab fa-regex"></i>
+          </div>
+          <a href="https://www.codecademy.com/learn/learn-node-sqlite" target="_blank"
+            ><img src="./src/image/Codecademy_Node-SQLite.jpg" alt="a certificate node-sqlite"
+          /></a>
+
+          <div class="skill-set">
+            <p><strong>Skills qualified: TypeScript</strong></p>
+            <i class="fab fa-regex"></i>
+          </div>
+          <a href="https://www.codecademy.com/learn/learn-typescript" target="_blank"
+            ><img src="./src/image/Codecademy_learn-TypeScript-course.jpg" alt="a certificate TypeScript"
+          /></a>
         </details>
       </section>
 
@@ -212,6 +230,7 @@
           <i class="fab fa-wordpress"></i>
           <i class="fas fa-universal-access"></i>
           <i class="fab fa-js"></i>
+          <i class="fab fa-ts"></i>
           <i class="fab fa-react"></i>
           <!-- <i class="fab fa-sketch"></i>
           <i class="fab fa-figma"></i> -->
