update portfolio page v2

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             ><img src="./src/image/quotes.jpg" alt="a site loads random quotes" class="project-image"
           /></a>
           <p class="project-description">
-            My first portofolio project, which back-end API running on node deployed on the docker, and front-end page
-            loads random quotes.
+            My first portofolio project, which the backend REST API is built with Node/Express/Sqlite deployed on the
+            docker, and frontend page hosted on github page and fetching data from the backend.
           </p>
           <div class="skill-set">
             <p><strong>Skills applied:</strong></p>
